--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "waytrack backend project",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/ErazorWhite/waytrack_backend/issues"
   },
-  "homepage": "https://github.com/ErazorWhite/waytrack_backend#readme"
+  "homepage": "https://github.com/ErazorWhite/waytrack_backend#readme",
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/node": "^20.14.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
